--- a/package.json
+++ b/package.json
@@ -1,22 +1,50 @@
 {
-  "name": "next-prisma",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6"
-  }
+	"name": "next-prisma",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"prisma": {
+		"seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/register --transpileOnly prisma/seed.ts"
+	},
+	"dependencies": {
+		"@auth/prisma-adapter": "^1.0.1",
+		"@hookform/resolvers": "^3.2.0",
+		"@next-auth/prisma-adapter": "^0.4.4-canary.81",
+		"@prisma/client": "^5.1.1",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-select": "^1.2.2",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@types/react": "18.2.15",
+		"@types/react-dom": "18.2.7",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"eslint": "8.45.0",
+		"eslint-config-next": "13.4.10",
+		"lucide-react": "^0.263.1",
+		"next": "13.4.10",
+		"next-auth": "^4.22.3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.45.4",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss-animate": "^1.0.6",
+		"typescript": "5.1.6",
+		"zod": "^3.21.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20.4.2",
+		"autoprefixer": "^10.4.14",
+		"eslint-config-prettier": "^8.8.0",
+		"postcss": "^8.4.26",
+		"prettier": "^3.0.0",
+		"prisma": "^5.0.0",
+		"tailwindcss": "^3.3.3",
+		"ts-node": "^10.9.1",
+		"tsconfig-paths": "^4.2.0"
+	}
 }
