--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.45.4",
+		"react-loader-spinner": "^5.3.4",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.6",
 		"typescript": "5.1.6",
